# World-Robot-Summit-2023

./: README.md
robot_viz/: CMakeLists.txt  package.xml
robot_viz/include/: kinematics.h  sketch.h
robot_viz/src/: robot_viz_node.cpp  sketch.cpp
wrs_crain_x7/: CMakeLists.txt  package.xml
wrs_crain_x7/include/: Dynamixel.h
wrs_crain_x7/src/: Dynamixel.cpp  wrs_crain_x7_node.cpp
wrs_crane_x7/: CMakeLists.txt  package.xml
wrs_crane_x7/src/: Dynamixel.cpp  wrs_crane_x7_node.cpp
wrs_launch/: CMakeLists.txt  package.xml
wrs_launch/launch/: dynamixel.launch  init.launch  robot_motion.launch
wrs_mecanum/: CMakeLists.txt  package.xml
wrs_mecanum/include/: Dynamixel.h  sketch.h
wrs_mecanum/src/: Dynamixel.cpp  sketch.cpp  wrs_mecanum_node.cpp
wrs_motion_planner/: CMakeLists.txt  package.xml
wrs_motion_planner/include/: kinematics.h  wrs_motion_planner_node.h
wrs_motion_planner/src/: kinematics.cpp  main.cpp  wrs_initial_motion.cpp  wrs_motion_planner_node.cpp  wrs_motion_planner_node2.cpp
wrs_robot_arm/: CMakeLists.txt  package.xml
wrs_robot_viz/: CMakeLists.txt  package.xml
wrs_robot_viz/include/: kinematics.h  sketch.h
wrs_robot_viz/src/: kinematics.cpp  psketch.cpp  sketch.cpp  wrs_robot_viz_node.cpp
